--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <h1>Monday Times</h1>
   </header>>
 
-  <menu>
+  <nav>
     <ul>
       <li>News</li>
       <li>Sports</li>
       <li>Weather</li>
     </ul>
-  </menu>
+  </nav>
 
   <section>
     <h2>News Section</h2>
