--- a/index.html
+++ b/index.html
@@ -19,22 +19,72 @@
         <li>Weather</li>
       </ul>
     </nav>
-  </header>>
+  </header>
 
   
 
   <section>
+    
     <h2>News Section</h2>
+    <div>
     <article>
-      <h2>News Article</h2>
+      <h2>News Article 1</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in porta lorem. Morbi condimentum est
         nibh, et consectetur tortor feugiat at.</p>
     </article>
+  </div>
+  <div>
     <article>
-      <h2>News Article</h2>
+      <h2>News Article 2</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in porta lorem. Morbi condimentum est
         nibh, et consectetur tortor feugiat at.</p>
     </article>
+  </div>
+  <div>
+    <article>
+      <h2>News Article 1</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in porta lorem. Morbi condimentum est
+        nibh, et consectetur tortor feugiat at.</p>
+    </article>
+  </div>
+  <div>
+    <article>
+      <h2>News Article 2</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in porta lorem. Morbi condimentum est
+        nibh, et consectetur tortor feugiat at.</p>
+    </article>
+  </div>
+  <div>
+    <article>
+      <h2>News Article 1</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in porta lorem. Morbi condimentum est
+        nibh, et consectetur tortor feugiat at.</p>
+    </article>
+  </div>
+  <div>
+    <article>
+      <h2>News Article 2</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in porta lorem. Morbi condimentum est
+        nibh, et consectetur tortor feugiat at.</p>
+    </article>
+  </div>
+  <div>
+    <article>
+      <h2>News Article 1</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in porta lorem. Morbi condimentum est
+        nibh, et consectetur tortor feugiat at.</p>
+    </article>
+  </div>
+  <div>
+    <article>
+      <h2>News Article 2</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in porta lorem. Morbi condimentum est
+        nibh, et consectetur tortor feugiat at.</p>
+    </article>
+  </div>
+
+
+    
   </section>
 
   <footer>
